--- a/src/styles.css
+++ b/src/styles.css
@@ -26,10 +26,26 @@
   font-style: normal;
 }
 
+@layer utilities {
+  .font-kakao {
+    font-family: "KakaoSmallSans", -apple-system, BlinkMacSystemFont, "Segoe UI";
+  }
+  .font-head {
+    font-size: 1.25px;
+    line-height: 1.5;
+  }
+  .font-body {
+    font-size: 1rem;
+    line-height: 1.5;
+  }
+  .font-small {
+    font-size: 0.875rem;
+    line-height: 1.5;
+  }
+}
+
 body {
-  font-family: "KakaoSmallSans", -apple-system, BlinkMacSystemFont, "Segoe UI";
-  margin: 0;
-  padding: 0;
+  @apply w-screen h-screen m-0 p-12 box-border font-kakao border-neutral-border;
   background: transparent;
 }
 
