--- a/src/styles.css
+++ b/src/styles.css
@@ -30,23 +30,13 @@
   .font-kakao {
     font-family: "KakaoSmallSans", -apple-system, BlinkMacSystemFont, "Segoe UI";
   }
-  .font-head {
-    font-size: 1.25px;
-    line-height: 1.5;
-  }
-  .font-body {
-    font-size: 1rem;
-    line-height: 1.5;
-  }
-  .font-small {
-    font-size: 0.875rem;
-    line-height: 1.5;
-  }
 }
 
 body {
-  @apply w-screen h-screen m-0 p-12 box-border font-kakao border-neutral-border;
+  @apply w-screen h-screen m-0 p-12 box-border font-kakao border-border text-sm text-text bg-background;
   background: transparent;
+  line-height: 1.5;
+  user-select: none;
 }
 
 /* 스크롤바 스타일링 */
